src/assets/scss/components/_popin.scss
@import '../variables';

.popin {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 10000;
  display: flex;
  flex-direction: column;
  width: 100%;
  background: rgba($wd-border-light, 0.8);
  min-height: 100vh;
  align-items: center;
  justify-content: center;

  &-dialog {
    border-radius: $wd-border-radius-medium;
    min-width: 400px;
    background-color: $wd-white;
    padding: $wd-padding-3 $wd-padding-5;
    &-select {
      position: relative;
      top: calc(-#{$wd-height-xsmall} + -#{$wd-padding-3});
      div {
        cursor: pointer;
        color: $wd-white;
        height: $wd-height-xsmall;
        text-align: center;
        border-radius: $wd-border-radius-medium $wd-border-radius-medium 0 0;
        background-color: $wd-primary;
        &:hover {
          background-color: $wd-secondary;
        }
        &.active {
          background-color: $wd-secondary;
        }
      }
    }
  }

  &-btn {
    border-radius: $wd-border-radius-large;
    font-size: $wd-popin-btn-font-xlarge;
    padding: $wd-padding-2 $wd-padding-3;
    line-height: 1;
  }

  .cancel_button {
    text-align: center;
    margin-top: $wd-margin-medium;
    font-size: $wd-h3-font-size;
    color: $wd-text;
    text-decoration: underline;
  }
}

